--- a/changes.txt
+++ b/changes.txt
@@ -7,3 +7,5 @@ Date 		CommitID		Changes
 					Also made appropriate changes in the c++ code and script.
 						
 					"alter table root_tbl change current current_active tinyint(1);"
+--------------------------------------------------------------------------------------------------------
+14.03.2013	14.03.2013-01		Add "expand/collapse all" functionality to the tree
