--- a/changes.txt
+++ b/changes.txt
@@ -19,3 +19,5 @@ Date 		CommitID		Changes
 17.03.2013      17.03.2013-2		Fix availability of menu items when database changed, implement export node description to the file
 17.03.2013      17.03.2013-3            Implement load node descriptor from file, 'undo' and 'redo', fix some errors.
 17.03.2013      17.03.2013-4		bugfix ('+' instead of '++')
+--------------------------------------------------------------------------------------------------------
+18.03.2013      18.03.2013-1		Implement change font and font size for node description
