--- a/changes.txt
+++ b/changes.txt
@@ -26,3 +26,5 @@ Date 		CommitID		Changes
 19.03.2013      19.03.2013-1		Add items to the editor menu
 --------------------------------------------------------------------------------------------------------
 20.03.2013      20.03.2013-1		Implement change case of the text in the editor
+--------------------------------------------------------------------------------------------------------
+22.03.2013      22.03.2013-1            Implement fore-and background text of editor elements (has bug with backgound color visualisation)
