--- a/changes.txt
+++ b/changes.txt
@@ -30,3 +30,5 @@ Date 		CommitID		Changes
 22.03.2013      22.03.2013-1            Implement fore-and background text of editor elements (has bug with backgound color visualisation)
 --------------------------------------------------------------------------------------------------------
 23.03.2013      23.03.2013-1	        Fix the bug with the slow attachments status detection. 
+--------------------------------------------------------------------------------------------------------
+25.03.2013      25.03.2013-1            Implement insert table function
