--- a/changes.txt
+++ b/changes.txt
@@ -38,3 +38,4 @@ Date 		CommitID		Changes
 28.03.2013      28.03.2013-1		Modify pdb/dbdescription.xml for SqlLite dababase
 28.03.2013      28.03.2013-2            Implement split table cells and insert link to image
 --------------------------------------------------------------------------------------------------------
+30.03.2013      30.03.2013-1		Implement export node (subtree) to the HDD
