--- a/changes.txt
+++ b/changes.txt
@@ -43,3 +43,6 @@ Date 		CommitID		Changes
 30.03.2013      30.03.2013-3            Implement user-defined colors for the nodes. WARNING: table node_tbl changed!!!!
 --------------------------------------------------------------------------------------------------------
 03.04.2013	03.04.2013-1		Implement possibility to change encrypt mode "on fly"
+--------------------------------------------------------------------------------------------------------
+04.04.2013	04.04.2013-1		Implement lock screen 
+--------------------------------------------------------------------------------------------------------
