--- a/changes.txt
+++ b/changes.txt
@@ -5,7 +5,6 @@ Date 		CommitID		Changes
 13.03.2013	13.03.2013-01		rename column 'current' in the table 'root_tbl'.
 					Made is because 'current' is reserved in Oracle.
 					Also made appropriate changes in the c++ code and script.
-						
 					"alter table root_tbl change current current_active tinyint(1);"
 --------------------------------------------------------------------------------------------------------
 14.03.2013	14.03.2013-01		Add "expand/collapse all" functionality to the tree
@@ -46,3 +45,4 @@ Date 		CommitID		Changes
 --------------------------------------------------------------------------------------------------------
 04.04.2013	04.04.2013-1		Implement lock screen 
 --------------------------------------------------------------------------------------------------------
+06.04.2013	06.04.2013-1		Make new database table (icons_tbl)
