--- a/changes.txt
+++ b/changes.txt
@@ -52,3 +52,5 @@ Date 		CommitID		Changes
 --------------------------------------------------------------------------------------------------------
 10.04.2013      10.04.2013-1		Implement manage icons for nodes (quick search not finished yet)
 10.04.2013      10.04.2013-2            Implement manage icons for nodes (finished compeletely)
+--------------------------------------------------------------------------------------------------------
+11.04.2013      11.04.2013-1 		make some changes in the icons management
