--- a/changes.txt
+++ b/changes.txt
@@ -59,3 +59,5 @@ Date 		CommitID		Changes
 12.04.2013      12.04.2013-1            Fix error with the application style in settings
 --------------------------------------------------------------------------------------------------------
 13.04.2013      13.04.2013-1		Implement size of the icons in the settings and in the main app
+--------------------------------------------------------------------------------------------------------
+14.04.2013      14.04.2013-1		Implement quick filtering in the icon dialog
