--- a/changes.txt
+++ b/changes.txt
@@ -63,3 +63,5 @@ Date 		CommitID		Changes
 14.04.2013      14.04.2013-1		Implement quick filtering in the icon dialog
 --------------------------------------------------------------------------------------------------------
 20.04.2013      20.04.2013-1		Add text of the licence to the every file
+--------------------------------------------------------------------------------------------------------
+21.04.2013      21.04.2013-1		Modify README.md. Prepare to make changes in the PDBSettings
