--- a/changes.txt
+++ b/changes.txt
@@ -70,3 +70,5 @@ Date 		CommitID		Changes
 22.04.2013      22.04.2013-2		Implement log-window in the application	
 --------------------------------------------------------------------------------------------------------
 23.04.2013      23.04.2013-1            Fix db clean error on exit
+--------------------------------------------------------------------------------------------------------
+24.04.2013	24.04.2013-1		Make switcher on/off for Log-window
