--- a/changes.txt
+++ b/changes.txt
@@ -72,3 +72,7 @@ Date 		CommitID		Changes
 23.04.2013      23.04.2013-1            Fix db clean error on exit
 --------------------------------------------------------------------------------------------------------
 24.04.2013	24.04.2013-1		Make switcher on/off for Log-window
+--------------------------------------------------------------------------------------------------------
+25.04.2013      25.04.2013-1 		Intermediate update. Preparing for direct scan functionality25.04.2013      25.04.2013-1 		Intermediate update. Preparing for direct scan functionality
+--------------------------------------------------------------------------------------------------------
+
