--- a/changes.txt
+++ b/changes.txt
@@ -78,3 +78,5 @@ Date 		CommitID		Changes
 26.04.2013      26.04.2013-1            Intermediate update. Preparing for direct scan functionality.
 --------------------------------------------------------------------------------------------------------
 30.04.2013      30.40.2013-1		Fix syntax error in MainWindow.cpp
+30.04.2013      30.40.2013-2		Intermediate update. Preparing for direct scan functionality.
+--------------------------------------------------------------------------------------------------------
