--- a/changes.txt
+++ b/changes.txt
@@ -80,4 +80,5 @@ Date 		CommitID		Changes
 30.04.2013      30.04.2013-1		Fix syntax error in MainWindow.cpp
 30.04.2013      30.04.2013-2		Intermediate update. Preparing for direct scan functionality.
 30.04.2013      30.04.2013-3		Fix problem with toolbars control menu (right button on toolbars)
+30.04.2013      30.04.2013-4		Fix problem with non-selected attachment
 --------------------------------------------------------------------------------------------------------
