--- a/changes.txt
+++ b/changes.txt
@@ -86,3 +86,5 @@ Date 		CommitID		Changes
 --------------------------------------------------------------------------------------------------------
 01.05.2013	01.05.2013-1 		Set all zoom buttons in the drop-down list on the combobox (scanning), add 
 					proportional/nonproportional resize for the image
+--------------------------------------------------------------------------------------------------------
+02.05.2013	02.05.2013-1		Some changes in cofiguration program. (not fimished yet, intermediate update)
