--- a/changes.txt
+++ b/changes.txt
@@ -90,3 +90,5 @@ Date 		CommitID		Changes
 02.05.2013	02.05.2013-1		Some changes in cofiguration program. (not fimished yet, intermediate update)
 --------------------------------------------------------------------------------------------------------
 03.05.2013 	03.05.2013-1		Finish scanner settings in cofiguration program.
+--------------------------------------------------------------------------------------------------------
+05.05.2013	05.05.2013-1		Add check correctness of scanner configuration
