--- a/changes.txt
+++ b/changes.txt
@@ -94,3 +94,4 @@ Date 		CommitID		Changes
 05.05.2013	05.05.2013-1		Add check correctness of scanner configuration
 05.05.2013      05.05.2013-2		Scan documents implemented in the pdb completely.
 --------------------------------------------------------------------------------------------------------
+07.05.2013      07.05.2013-1		Implement default extension for the scanned image
