--- a/changes.txt
+++ b/changes.txt
@@ -97,3 +97,6 @@ Date 		CommitID		Changes
 07.05.2013      07.05.2013-1		Implement default extension for the scanned image
 --------------------------------------------------------------------------------------------------------
 17.05.2013	17.05.2013-1		Implement Undo and Redo for the scanned images
+--------------------------------------------------------------------------------------------------------
+08.07.2013	08.07.2013-1		Implement new thread pool, make correct exit from application.
+--------------------------------------------------------------------------------------------------------
