--- a/changes.txt
+++ b/changes.txt
@@ -100,4 +100,5 @@ Date 		CommitID		Changes
 --------------------------------------------------------------------------------------------------------
 08.07.2013	08.07.2013-1		Implement new thread pool, make correct exit from application.
 08.07.2013	08.07.2013-2		Fix the problem with cut and paste attachments
+08.07.2013      08.07.2013-3            Use new threadpool
 --------------------------------------------------------------------------------------------------------
