--- a/changes.txt
+++ b/changes.txt
@@ -103,3 +103,5 @@ Date 		CommitID		Changes
 08.07.2013      08.07.2013-3            Use new threadpool
 --------------------------------------------------------------------------------------------------------
 31.07.2013	31.07.2013-1		Make exit buttons unavailable after 1-st click, use new threadpool
+--------------------------------------------------------------------------------------------------------
+01.102013	01.10.2013-1		Make ask password before loading trees.
